add some padding on the left

--- a/views/stylesheets/main.scss
+++ b/views/stylesheets/main.scss
@@ -43,7 +43,7 @@ a:hover {
   #mainTitle {
     width: 600px;
     margin: auto;
-    padding: 5px 0px 15 0px;
+    padding: 5px 0px 15 20px;
     h1 {
       display: inline;
     }
@@ -88,6 +88,7 @@ a:hover {
 #main {
   width: 600px;
   margin: auto;
+  padding-left: 20px;
 }
 
 #aboutme {
