--- a/views/stylesheets/main.scss
+++ b/views/stylesheets/main.scss
@@ -66,10 +66,9 @@ a:hover {
         background-size: 60px 60px;
         -moz-background-size: 60px 60px;
         background-position: -5px -5px;
-      }
-
-      .twitter:hover {
-        background-image: url(/images/twitter-hover.png);
+        &:hover {
+          background-image: url(/images/twitter-hover.png);
+        }
       }
 
       .github {
@@ -78,10 +77,9 @@ a:hover {
         background-size: 45px 45px;
         -moz-background-size: 45px 45px;
         background-position: 0px 1px;
-      }
-
-      .github:hover {
-        background-image: url(/images/octocat-hover.png);
+        &:hover {
+          background-image: url(/images/octocat-hover.png);
+        }
       }
     }
   }
