add odkbuild to project list

--- a/views/index.erb
+++ b/views/index.erb
@@ -45,6 +45,10 @@
         <p>An absurdly simple script for rendering markdown with github styles.</p>
       </div>
       <div class="project">
+        <h3><a href="https://github.com/clint-tseng/odkbuild">odkbuild</a></h3>
+        <p>Form builder for the <a href="http://opendatakit.org/">Open Data Kit</a> project.</p>
+      </div>
+      <div class="project">
         <h3><a href="http://addons.songbirdnest.com/addon/1879">MooDJ</a></h3>
         <p>A Songbird extension that creates playlists based on listening sessions.</p>
       </div>
