simple image preloading

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,6 +4,13 @@
     <link rel="stylesheet" href="/main.css" type="text/css" />
     <script src="https://github.com/ooyala/livecss/raw/master/livecss.js"></script>
     <script type="text/javascript">
+      // Simple image preloading
+      var twitterBackground = new Image();
+      var githubBackground = new Image();
+      twitterBackground.src = "/images/twitter-hover.png";
+      githubBackground.src = "/images/github-hover.png";
+    </script>
+    <script type="text/javascript">
       var _gaq = _gaq || [];
       _gaq.push(['_setAccount', 'UA-12919440-1']);
       _gaq.push(['_trackPageview']);
