--- a/views/index.erb
+++ b/views/index.erb
@@ -34,10 +34,15 @@
     </div>
     <div id="main">
       <div id="aboutme">
-        <img src="images/me.jpg" />
-        <p>I'm a programmer living in Palo Alto, California.</p>
-        <p>By day I design beautiful UI and APIs for <a href="http://www.ooyala.com">Ooyala</a>.</p>
-        <p>By night I work on a number of other projects.</p>
+        <div class="left">
+          <img src="images/me.jpg" />
+          <span class="email"><a href="mailto:dmacdougall@gmail.com">email me</a></span>
+        </div>
+        <div>
+          <p>I'm a programmer living in Palo Alto, California.</p>
+          <p>By day I design beautiful UI and APIs for <a href="http://www.ooyala.com">Ooyala</a>.</p>
+          <p>By night I work on a number of other projects.</p>
+        </div>
       </div>
       <div class="project">
         <h3><a href="https://github.com/dmacdougall/fezzik">fezzik</a></h3>
