--- a/views/stylesheets/main.scss
+++ b/views/stylesheets/main.scss
@@ -53,8 +53,9 @@ a:hover {
     }
 
     #linkIcons {
-      display: inline-block;;
+      display: inline-block;
       padding-left: 40px;
+
       .icon {
         display: inline-block;
         height: 50px;
