Add spin to project list

--- a/views/index.erb
+++ b/views/index.erb
@@ -49,6 +49,10 @@
         <p>A light deployment system that gets out of your way.</p>
       </div>
       <div class="project">
+        <h3><a href="https://github.com/dmacdougall/spin">spin</a></h3>
+        <p>Write RESTful web apps in Racket.</p>
+      </div>
+      <div class="project">
         <h3><a href="https://github.com/dmacdougall/git-review">git-review</a></h3>
         <p>A command line code review tool for git.</p>
       </div>
