--- a/views/index.erb
+++ b/views/index.erb
@@ -1,73 +1,37 @@
-<html>
-  <head>
-    <title>Daniel MacDougall</title>
-    <link rel="stylesheet" href="/main.css" type="text/css" />
-    <script src="https://github.com/ooyala/livecss/raw/master/livecss.js"></script>
-    <script type="text/javascript">
-      // Simple image preloading
-      var twitterBackground = new Image();
-      var githubBackground = new Image();
-      twitterBackground.src = "/images/twitter-hover.png";
-      githubBackground.src = "/images/github-hover.png";
-    </script>
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-12919440-1']);
-      _gaq.push(['_trackPageview']);
-
-      (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-      })();
-    </script>
-  </head>
-  <body>
-    <div id="mainTitleBackground">
-      <div id="mainTitle">
-        <h1><a href="/">Daniel MacDougall</a></h1>
-        <div id="linkIcons">
-          <a class="twitter icon" href="http://twitter.com/dmacdougall"></a>
-          <a class="github icon" href="http://github.com/dmacdougall"></a>
-        </div>
-      </div>
+<div id="mainContent">
+  <div id="aboutme">
+    <div class="left">
+      <img src="images/me.jpg" />
+      <span class="email"><a href="mailto:dmacdougall@gmail.com">email me</a></span>
     </div>
-    <div id="main">
-      <div id="aboutme">
-        <div class="left">
-          <img src="images/me.jpg" />
-          <span class="email"><a href="mailto:dmacdougall@gmail.com">email me</a></span>
-        </div>
-        <div>
-          <p>I'm a programmer living in Palo Alto, California.</p>
-          <p>By day I design beautiful UI and APIs for <a href="http://www.ooyala.com">Ooyala</a>.</p>
-          <p>By night I work on a number of other projects.</p>
-        </div>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/dmacdougall/fezzik">fezzik</a></h3>
-        <p>A light deployment system that gets out of your way.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/dmacdougall/spin">spin</a></h3>
-        <p>Write RESTful web apps in Racket.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/dmacdougall/git-review">git-review</a></h3>
-        <p>A command line code review tool for git.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/dmacdougall/markdown_doctor">markdown_doctor</a></h3>
-        <p>An absurdly simple script for rendering markdown with github styles.</p>
-      </div>
-      <div class="project">
-        <h3><a href="https://github.com/clint-tseng/odkbuild">odkbuild</a></h3>
-        <p>Form builder for the <a href="http://opendatakit.org/">Open Data Kit</a> project.</p>
-      </div>
-      <div class="project">
-        <h3><a href="http://addons.songbirdnest.com/addon/1879">MooDJ</a></h3>
-        <p>A Songbird extension that creates playlists based on listening sessions.</p>
-      </div>
+    <div>
+      <p>I'm a programmer living in Palo Alto, California.</p>
+      <p>By day I design beautiful UI and APIs for <a href="http://www.ooyala.com">Ooyala</a>.</p>
+      <p>By night I work on a number of other projects.</p>
     </div>
-  </body>
-</html>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/dmacdougall/fezzik">fezzik</a></h3>
+    <p>A light deployment system that gets out of your way.</p>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/dmacdougall/spin">spin</a></h3>
+    <p>Write RESTful web apps in Racket.</p>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/dmacdougall/git-review">git-review</a></h3>
+    <p>A command line code review tool for git.</p>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/dmacdougall/markdown_doctor">markdown_doctor</a></h3>
+    <p>An absurdly simple script for rendering markdown with github styles.</p>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/clint-tseng/odkbuild">odkbuild</a></h3>
+    <p>Form builder for the <a href="http://opendatakit.org/">Open Data Kit</a> project.</p>
+  </div>
+  <div class="project">
+    <h3><a href="http://addons.songbirdnest.com/addon/1879">MooDJ</a></h3>
+    <p>A Songbird extension that creates playlists based on listening sessions.</p>
+  </div>
+</div>
