--- a/views/stylesheets/main.scss
+++ b/views/stylesheets/main.scss
@@ -91,34 +91,47 @@ a:hover {
 }
 
 #main {
+  width: 1000px;
+  margin: auto;
+}
+
+#mainContent {
   width: 600px;
   margin: auto;
   padding-left: 20px;
-}
 
-#aboutme {
-  margin: 40px 0px 80px 0px;
+  #aboutme {
+    margin: 40px 0px 80px 0px;
 
-  .left {
-    width: 100px;
-    text-align: center;
-    margin-right: 40px;
-
-    img {
+    .left {
       width: 100px;
-      height: 100px;
-      border: 2px solid $darkcolor;
-      margin-bottom: 5px;
+      text-align: center;
+      margin-right: 40px;
+
+      img {
+        width: 100px;
+        height: 100px;
+        border: 2px solid $darkcolor;
+        margin-bottom: 5px;
+      }
+
+      .email {
+        font-size: 0.8em;
+      }
     }
 
-    .email {
-      font-size: 0.8em;
+
+    p {
+      margin-bottom: 21px;
     }
   }
 
+  .project {
+    margin-bottom: 30px;
 
-  p {
-    margin-bottom: 21px;
+    h3 {
+      padding: 5px 0px;
+    }
   }
 }
 
