--- a/views/stylesheets/main.scss
+++ b/views/stylesheets/main.scss
@@ -135,11 +135,22 @@ a:hover {
   }
 }
 
-.project {
-  margin-bottom: 30px;
+#gpsContent {
+  margin-left: 100px;
 
-  h3 {
-    padding: 5px 0px;
+  #gpsDescription {
+    margin: 40px 0px 40px 0px;
+  }
+
+  #gpsDate {
+    color: #AAAAAA;
+    margin-bottom: 10px;
+  }
+
+  #mapCanvas {
+    width: 800px;
+    height: 600px;
+    border: 1px solid #CCCCCC;
+    -webkit-box-shadow: 0px 0px 30px #CCCCCC;
   }
 }
-
