Add Fezzik and Panache projects

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,8 +11,16 @@
     </div>
   </div>
   <div class="project">
-    <h3><a href="https://github.com/dmacdougall/fezzik">fezzik</a></h3>
-    <p>A light deployment system that gets out of your way.</p>
+    <h3><a href="https://github.com/ooyala/barkeep">Barkeep</a></h3>
+    <p>The friendly code review system.</p>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/dmacdougall/fezzik">Fezzik</a></h3>
+    <p>A lightweight deployment tool.</p>
+  </div>
+  <div class="project">
+    <h3><a href="https://github.com/ooyala/panache">Panache</a></h3>
+    <p>Templated code style checking.</p>
   </div>
   <div class="project">
     <h3><a href="https://github.com/dmacdougall/spin">spin</a></h3>
