Change Barkeep url to getbarkeep.org

--- a/views/index.erb
+++ b/views/index.erb
@@ -11,7 +11,7 @@
     </div>
   </div>
   <div class="project">
-    <h3><a href="https://github.com/ooyala/barkeep">Barkeep</a></h3>
+    <h3><a href="http://getbarkeep.org">Barkeep</a></h3>
     <p>The friendly code review system.</p>
   </div>
   <div class="project">
