Change github links to dmac

--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,7 @@
     <p>The friendly code review system.</p>
   </div>
   <div class="project">
-    <h3><a href="https://github.com/dmacdougall/fezzik">Fezzik</a></h3>
+    <h3><a href="https://github.com/dmac/fezzik">Fezzik</a></h3>
     <p>A lightweight deployment tool.</p>
   </div>
   <div class="project">
@@ -23,15 +23,15 @@
     <p>Templated code style checking.</p>
   </div>
   <div class="project">
-    <h3><a href="https://github.com/dmacdougall/spin">spin</a></h3>
+    <h3><a href="https://github.com/dmac/spin">spin</a></h3>
     <p>Write RESTful web apps in Racket.</p>
   </div>
   <div class="project">
-    <h3><a href="https://github.com/dmacdougall/git-review">git-review</a></h3>
+    <h3><a href="https://github.com/dmac/git-review">git-review</a></h3>
     <p>A command line code review tool for git.</p>
   </div>
   <div class="project">
-    <h3><a href="https://github.com/dmacdougall/markdown_doctor">markdown_doctor</a></h3>
+    <h3><a href="https://github.com/dmac/markdown_doctor">markdown_doctor</a></h3>
     <p>An absurdly simple script for rendering markdown with github styles.</p>
   </div>
   <div class="project">
