--- a/views/layout.erb
+++ b/views/layout.erb
@@ -28,7 +28,7 @@
         <h1><a href="/">Daniel MacDougall</a></h1>
         <div id="linkIcons">
           <a class="twitter icon" href="http://twitter.com/dmacdougall"></a>
-          <a class="github icon" href="http://github.com/dmacdougall"></a>
+          <a class="github icon" href="http://github.com/dmac"></a>
         </div>
       </div>
     </div>
